Migrate REST-Service to Boot

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database-platform=com.jb.recipedb.backend.sql.SQLDialect
 spring.jpa.hibernate.ddl-auto=update
 # debug:
-spring.datasource.url = jdbc:sqlite:backend/db/database.db
-#spring.datasource.url = jdbc:sqlite:db/database.db
+#spring.datasource.url = jdbc:sqlite:backend/db/database.db
+spring.datasource.url = jdbc:sqlite:db/database.db
 spring.datasource.driver-class-name = org.sqlite.JDBC
